test/mutation_analysis/s0044_wildcard_matching/hafis/ablation_o3_r50/mutants/2/result.txt
./test/mutation_analysis/s0044_wildcard_matching/hafis/ablation_o3_r50/mutants/2/Solution.java:23: error: unreachable statement
        while (false) {
                      ^
1 error
